devscripts (2.15.10) UNRELEASED; urgency=medium

  [ Benjamin Drung ]
  * test_uscan: Fix failure in testFileExclusion due to wrong tarfile name
    test on Ubuntu.

  [ Dominique Dumont ]
  * licensecheck: parse file matching -c regex whatever its mime
    type (Closes: #803724)

 -- Benjamin Drung <bdrung@debian.org>  Fri, 23 Oct 2015 23:54:58 +0200

devscripts (2.15.9) unstable; urgency=medium

  [ Joachim Breitner ]
  * mk-origtargz:
    + Work around tar --delete not working unless piping. This should
      make the support for Excluded-Files more reliable.
      Thanks to Felix Natter for identifying the problem and solution.
  * debcommit:
    + Detect git repositories even if .git is a file instead of a directory,
      as it can be the case with "git worktree" worktrees.
  * origtargz: Call rm -rf with "--", so that files starting with - are not
    considered arguments by rm.

  [ James McCoy ]
  * bts:
    + Add reference to pts-subscribe(1) in bts(1).  (Closes: #794689)
  * tagpending:
    + Fix warning when there are no fixed bugs in the changelog.  (Closes:
      #795470)
    + Avoid querying the BTS when there are no bugs closed in the changelog.
  * mergechanges:
    + Add -S/--source argument to skip all binary packages.  Thanks to Ansgar
      Burchardt for the patch.  (Closes: #795573)
  * debchange:
    + Only emit "no orig tarball" for non-native packages.  (Closes: #797018)
  * debcheckout:
    + Clarify documentation of -f option.  Thanks to Daniel Shahaf for the
      patch!  (Closes: #797265)
  * annotate-output:
    + Optimize the case of FORMAT not containing any date format codes.
      Thanks to Stefan Fritsch for the patch.  (Closes: #799553)
  * build-rdeps:
    + Avoid recursing into apt's lists directory.  Only the top-level files
      are interesting and this avoids a “Permission denied” warning with apt
      versions that restrict access to the lists/partial directory.  Thanks to