@@ -7,6 +7,7 @@ devscripts (2.15.10) UNRELEASED; urgency=medium
   [ Dominique Dumont ]
   * licensecheck: parse file matching -c regex whatever its mime
     type (Closes: #803724)
+  * licensecheck: --text option is deprecated
 
  -- Benjamin Drung <bdrung@debian.org>  Fri, 23 Oct 2015 23:54:58 +0200
 
